tests/rosetta/transpiler/Swift/conditional-structures-2.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden2824911455/001/main.swift:11:13: error: 'nil' requires a contextual type
 9 | func example2(_ flag: Bool) {
10 |     if flag {
11 |         _ = nil
   |             `- error: 'nil' requires a contextual type
12 |     } else {
13 |         _ = nil

/tmp/TestSwiftTranspiler_Rosetta_Golden2824911455/001/main.swift:13:13: error: 'nil' requires a contextual type
11 |         _ = nil
12 |     } else {
13 |         _ = nil
   |             `- error: 'nil' requires a contextual type
14 |     }
15 | }
