tests/rosetta/transpiler/Swift/conditional-structures-2.swift
// Generated by Mochi transpiler v0.10.52 on 2025-08-01 22:07:28 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

func example2(_ flag: Bool) {
    if flag {
        _ = nil
    } else {
        _ = nil
    }
}
